# StarCraft

./: CMakeLists.txt  README.md
include/: Abilities.h  Battle.h  BattleCruser.h  Carrier.h  Defines.h  Phoenix.h  Ship.h  Viking.h
src/: Battle.c  BattleCruser.c  Carrier.c  Phoenix.c  ShipFunctions.c  Viking.c  main.c
